--- a/src/slider/slider.css
+++ b/src/slider/slider.css
@@ -46,9 +46,12 @@
 }
 .Slider__control-points-item {
   margin: 0 5px;
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   border-radius: 50%;
-  background-color: #fff;
+  background-color: rgb(170, 169, 169);
   cursor: pointer;
+}
+.Slider__control-points-item_active{
+  background-color: #fff;
 }
